--- a/index.html
+++ b/index.html
@@ -1,47 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>NIE – IUCEE</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>IC Design Club | NIE Mysuru</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<h1>NIE – IUCEE</h1>
-<h3>National Institute of Engineering, Mysuru</h3>
+<header class="hero">
+  <h1>IC Design Club (ICDC)</h1>
+  <p>Innovating Integrated Circuits | NIE Mysuru</p>
+</header>
 
-<hr>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="activities.html">Activities</a>
+  <a href="achievements.html">Achievements</a>
+  <a href="faculty.html">Faculty</a>
+  <a href="contact.html">Contact</a>
+</nav>
 
-<h2>About NIE – IUCEE</h2>
-<p>
-NIE–IUCEE is an initiative to improve engineering education through
-faculty development, student skill enhancement, and global collaboration.
-</p>
+<section class="card">
+  <h2>About IC Design Club</h2>
+  <p>
+    IC Design Club (ICDC) is a student-driven technical club of the
+    Department of ECE, NIE Mysuru, focusing on VLSI, semiconductor
+    technology, and integrated circuit design through hands-on learning.
+  </p>
+</section>
 
-<h2>Vision</h2>
-<p>
-To transform engineering education by adopting global best practices.
-</p>
+<section class="grid">
+  <div class="box">
+    <h3>Vision</h3>
+    <p>To build strong foundations in IC design and semiconductor technology.</p>
+  </div>
 
-<h2>Mission</h2>
-<ul>
-    <li>Enhance teaching–learning processes</li>
-    <li>Encourage innovation and research</li>
-    <li>Strengthen industry–academia interaction</li>
-</ul>
+  <div class="box">
+    <h3>Mission</h3>
+    <p>Empower students with practical skills, innovation, and industry exposure.</p>
+  </div>
 
-<h2>Activities</h2>
-<ul>
-    <li>Faculty Development Programs (FDPs)</li>
-    <li>Workshops and training programs</li>
-    <li>Student skill development initiatives</li>
-</ul>
+  <div class="box">
+    <h3>Activities</h3>
+    <p>Workshops, project expos, hackathons, FDPs, and expert talks.</p>
+  </div>
+</section>
 
-<h2>Contact</h2>
-<p>
-National Institute of Engineering<br>
-Mysuru
-</p>
+<footer>
+  <p>© 2026 IC Design Club | NIE Mysuru</p>
+</footer>
 
 </body>
 </html>
